// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NativeLink Default 1`] = `
<div
  className="sc-bdvvtL sc-eGPXGI braPyZ clEaRK"
>
  <div
    className="sc-crHmcD dgzXGK"
  >
    <span>
      <a
        className="c-native-link sc-hiwPVj sc-lcepkR eyYsGq hztNvb u-text--large"
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Blockchain
      </a>
    </span>
    <span>
      <a
        className="c-native-link sc-hiwPVj sc-lcepkR eyYsGq hztNvb u-text--large"
        disabled={true}
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Blockchain
      </a>
    </span>
  </div>
</div>
`;

exports[`Storyshots NativeLink Sizing 1`] = `
<div
  className="sc-bdvvtL sc-eGPXGI braPyZ clEaRK"
>
  <div
    className="sc-crHmcD dgzXGK"
  >
    <span>
      <a
        appearance="default"
        className="c-native-link sc-hiwPVj sc-lcepkR eyYsGq hztNvb u-text--large"
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Large
      </a>
    </span>
    <span>
      <a
        appearance="default"
        className="c-native-link sc-hiwPVj sc-lcepkR iyoayI hztNvb"
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Regular
      </a>
    </span>
    <span>
      <a
        appearance="default"
        className="c-native-link sc-hiwPVj sc-lcepkR faYlpV hztNvb u-text--small"
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Small
      </a>
    </span>
    <span>
      <a
        appearance="default"
        className="c-native-link sc-hiwPVj sc-lcepkR bghXWo hztNvb u-text--xsmall"
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        XS Small
      </a>
    </span>
  </div>
</div>
`;

exports[`Storyshots NativeLink System 1`] = `
<div
  className="sc-bdvvtL sc-eGPXGI braPyZ clEaRK"
>
  <div
    className="sc-crHmcD dgzXGK"
  >
    <span>
      <a
        appearance="system"
        className="c-native-link sc-hiwPVj sc-ehCJOs iyoayI htcXDA u-text--medium"
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Blockchain
      </a>
    </span>
    <span>
      <a
        appearance="system"
        className="c-native-link sc-hiwPVj sc-ehCJOs bghXWo htcXDA u-text--xsmall"
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          id="/assets/icons/link.svg"
        />
        /lotus/miner
      </a>
    </span>
    <span>
      <a
        appearance="system"
        className="c-native-link sc-hiwPVj sc-ehCJOs bghXWo htcXDA u-text--xsmall"
        disabled={true}
        href="https://www.google.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          id="/assets/icons/link.svg"
        />
        /lotus/miner
      </a>
    </span>
  </div>
</div>
`;
